포트폴리오 업로드 및 조회 리팩토링 : feat : PortfolioType 변수명 변경에 따른 포트폴리오 저장 로직 수정 https://github.com/Team-TicketMate/ticketmate-server/issues/275